# clippy-claude-code

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
hooks/: clippy-state  install.sh
packs/: clippy-masko.json
scripts/: demo-states.sh
src/: anim.rs  engine.rs  main.rs  pack.rs  state.rs
