[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
cairo-rs = { version = "0.18", features = ["png"] }
webp-animation = { version = "0.9", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
